manifests/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: a-team
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
